# cfd-python

./: .gitignore  CHANGELOG.md  CMakeLists.txt  DISTRIBUTION.md  MIGRATION_PLAN.md  README.md  ROADMAP.md  build.py  dev_build.py  pyproject.toml
.github/workflows/: build-wheels.yml  publish.yml
backups/: build-wheels.yml.bak
cfd_python/: __init__.py  __init__.pyi  _exceptions.py  _loader.py  _version.py
examples/: README.md  backend_detection.py  backward_facing_step.py  basic_example.py  boundary_conditions.py  channel_flow.py  derived_fields.py  duct_flow_3d.py  error_handling.py  gpu_management.py  grid_3d.py  grid_convergence.py  heat_conduction.py  library_lifecycle.py  lid_driven_cavity.py  lid_driven_cavity_advanced.py  logging_example.py  output_formats.py  parameter_study.py  poisson_comparison.py  poisson_solver.py  solver_comparison.py  solver_discovery.py  taylor_green_vortex.py  visualization_matplotlib.py  visualization_numpy.py  vtk_output.py
scripts/: setup_distribution.py
src/: cfd_python.c
tests/: __init__.py  conftest.py  test_abi_compatibility.py  test_backend_availability.py  test_boundary_conditions.py  test_cpu_features.py  test_derived_fields.py  test_errors.py  test_gpu.py  test_import_handling.py  test_integration.py  test_internal_modules.py  test_lifecycle.py  test_logging.py  test_module.py  test_output.py  test_poisson_solver.py  test_simulation.py  test_solvers.py  test_vtk_output.py
