[build-system]
requires = [
    "scikit-build-core>=0.4.3",
    "setuptools-scm>=6.2",
]
build-backend = "scikit_build_core.build"

[project]
name = "cfd-python"
dynamic = ["version"]
description = "High-performance CFD simulation library with Python bindings"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "CFD Team"},
]
requires-python = ">=3.8"
keywords = ["cfd", "fluid-dynamics", "simulation", "numerical-methods", "physics"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: C",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Operating System :: OS Independent",
]
dependencies = []

# TODO: Add project URLs before release
# [project.urls]
# Homepage = "https://github.com/your-org/cfd-python"
# Documentation = "https://cfd-python.readthedocs.io"
# Repository = "https://github.com/your-org/cfd-python.git"
# Issues = "https://github.com/your-org/cfd-python/issues"
# Changelog = "https://github.com/your-org/cfd-python/blob/main/CHANGELOG.md"

[project.optional-dependencies]
test = [
    "pytest>=7.0",
    "pytest-benchmark",
    "numpy",
]
docs = [
    "sphinx>=5.0",
    "sphinx-rtd-theme",
    "myst-parser",
]
dev = [
    "black",
    "isort",
    "flake8",
    "mypy",
    "pre-commit",
]
viz = [
    "matplotlib",
    "plotly",
    "vtk",
]

[tool.scikit-build]
# Protect the configuration against future changes in scikit-build-core
minimum-version = "0.4"

# Setuptools-style build caching in a local directory
build-dir = "build/{wheel_tag}"

# Build stable ABI wheels for CPython 3.8+
# This creates cp38-abi3 wheels that work with Python 3.8+
wheel.py-api = "cp38"
wheel.expand-macos-universal-tags = true

[tool.scikit-build.cmake.define]
CMAKE_BUILD_TYPE = "Release"
CFD_STATIC_LINK = "ON"
CFD_USE_STABLE_ABI = "ON"
# Note: CFD_ROOT is passed via CIBW_ENVIRONMENT since it differs between local dev and CI

[tool.scikit-build.metadata]
[tool.scikit-build.metadata.version]
provider = "scikit_build_core.metadata.setuptools_scm"

[tool.cibuildwheel]
# Build wheels for Python 3.8+
build = ["cp38-*", "cp39-*", "cp310-*", "cp311-*", "cp312-*"]
skip = ["*-musllinux_*", "pp*"]  # Skip PyPy and musl Linux

# Test command to verify wheels work
# First list package contents to debug extension location, then try import
test-command = "python -c \"import os,sys; import importlib.util; spec=importlib.util.find_spec('cfd_python'); print('Package location:', spec.submodule_search_locations); pkgdir=spec.submodule_search_locations[0]; print('Contents:', os.listdir(pkgdir)); exts=[f for f in os.listdir(pkgdir) if f.endswith('.so') or f.endswith('.pyd')]; print('Extensions:', exts); import cfd_python; print('Version:', cfd_python.__version__)\""

# Global environment - static linking for self-contained wheels
# CFD_ROOT can be set to override the default ../cfd location
# CFD_USE_STABLE_ABI is enabled for wheel builds to support multiple Python versions
environment = { CMAKE_BUILD_TYPE = "Release", CFD_STATIC_LINK = "ON", CFD_USE_STABLE_ABI = "ON", CFD_ROOT = "../cfd" }

[tool.cibuildwheel.windows]
# Windows-specific configuration
# Build CFD library first (static), then build Python extension
# Only build 64-bit wheels (AMD64) - skip x86 (32-bit)
archs = ["AMD64"]
before-build = [
    "cmake -S %CFD_ROOT% -B %CFD_ROOT%/build -DCMAKE_BUILD_TYPE=Release -DBUILD_SHARED_LIBS=OFF -DCMAKE_MSVC_RUNTIME_LIBRARY=MultiThreaded",
    "cmake --build %CFD_ROOT%/build --config Release",
]

[tool.cibuildwheel.macos]
# macOS-specific configuration
# CFD_ROOT environment variable specifies the CFD library location
before-build = [
    "cmake -S $CFD_ROOT -B $CFD_ROOT/build -DCMAKE_BUILD_TYPE=Release -DBUILD_SHARED_LIBS=OFF",
    "cmake --build $CFD_ROOT/build --config Release",
]
# delocate handles any remaining dynamic dependencies (system libs)
repair-wheel-command = "delocate-wheel --require-archs {delocate_archs} -w {dest_dir} {wheel}"

[tool.cibuildwheel.linux]
# Linux-specific configuration
# manylinux images already have cmake and gcc installed
# CFD_ROOT environment variable specifies the CFD library location
# -DCMAKE_POSITION_INDEPENDENT_CODE=ON is required for static lib linked into shared object
before-build = [
    "echo 'DEBUG: CFD_ROOT='$CFD_ROOT && echo 'DEBUG: pwd='$(pwd) && ls -la $CFD_ROOT || echo 'CFD_ROOT not found'",
    "cmake -S $CFD_ROOT -B $CFD_ROOT/build -DCMAKE_BUILD_TYPE=Release -DBUILD_SHARED_LIBS=OFF -DCMAKE_POSITION_INDEPENDENT_CODE=ON",
    "cmake --build $CFD_ROOT/build --config Release",
    "echo 'DEBUG: Library built:' && ls -la $CFD_ROOT/build/lib/ || echo 'No lib directory'",
]
# auditwheel handles any remaining dynamic dependencies (system libs)
repair-wheel-command = "auditwheel repair -w {dest_dir} {wheel}"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]