[build-system]
requires = [
    "scikit-build-core>=0.4.3",
    "setuptools-scm>=6.2",
]
build-backend = "scikit_build_core.build"

[project]
name = "cfd-python"
dynamic = ["version"]
description = "High-performance CFD simulation library with Python bindings"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "CFD Team"},
]
requires-python = ">=3.8"
keywords = ["cfd", "fluid-dynamics", "simulation", "numerical-methods", "physics"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: C",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Operating System :: OS Independent",
]
dependencies = []

[project.optional-dependencies]
test = [
    "pytest>=7.0",
    "pytest-benchmark",
    "numpy",
]
docs = [
    "sphinx>=5.0",
    "sphinx-rtd-theme",
    "myst-parser",
]
dev = [
    "black",
    "isort",
    "flake8",
    "mypy",
    "pre-commit",
]
viz = [
    "matplotlib",
    "plotly",
    "vtk",
]

[tool.scikit-build]
minimum-version = "0.4"
build-dir = "build/{wheel_tag}"

[tool.scikit-build.cmake.define]
CMAKE_BUILD_TYPE = "Release"
CFD_STATIC_LINK = "ON"

[tool.scikit-build.metadata.version]
provider = "scikit_build_core.metadata.setuptools_scm"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
