[build-system]
requires = [
    "scikit-build-core>=0.4.3",
    "setuptools-scm>=6.2",
]
build-backend = "scikit_build_core.build"

[project]
name = "cfd-python"
dynamic = ["version"]
description = "High-performance CFD simulation library with Python bindings"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "CFD Team"},
]
requires-python = ">=3.9"
keywords = ["cfd", "fluid-dynamics", "simulation", "numerical-methods", "physics"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: C",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Operating System :: OS Independent",
]
dependencies = []

[project.optional-dependencies]
test = [
    "pytest>=7.0",
    "pytest-benchmark",
    "pytest-cov",
    "numpy",
]
docs = [
    "sphinx>=5.0",
    "sphinx-rtd-theme",
    "myst-parser",
]
dev = [
    "ruff",
    "mypy",
    "pre-commit",
]
viz = [
    "matplotlib",
    "plotly",
    "vtk",
]

[tool.scikit-build]
minimum-version = "0.4"
build-dir = "build/{wheel_tag}"
wheel.py-api = "cp39"

[tool.scikit-build.cmake.define]
CMAKE_BUILD_TYPE = "Release"
CFD_STATIC_LINK = "ON"
CFD_USE_STABLE_ABI = "ON"

[tool.scikit-build.metadata.version]
provider = "scikit_build_core.metadata.setuptools_scm"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.ruff]
target-version = "py39"
line-length = 100
exclude = [
    "build",
    "dist",
    ".venv",
    "__pycache__",
    "*.egg-info",
]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
]
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]       # Allow unused imports in __init__.py (re-exports)
"tests/*" = ["F841", "B007"]   # Allow unused variables in tests
"scripts/*" = ["F401"]         # Allow unused imports in setup scripts
"examples/*" = ["B007"]        # Allow unused loop variables in examples

[tool.ruff.lint.isort]
known-first-party = ["cfd_python"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
